g_vfs_backend_afc_set_info_from_afcinfo: set content type even if matcher is NULL

https://bugzilla.gnome.org/show_bug.cgi?id=612536